finished initial development for pulling leagues for user
