# backend/src/servicesAndHelpers/leagues/leagueResponseBuilder.ts
@@ -1,5 +1,5 @@
 import { LeagueAttributes } from "../../models/League";
-import { CreateLeagueResponse } from "../../types/league/leagueDto";
+import { CreateLeagueResponse, GetLeaguesForProfileResponse } from "../../types/league/leagueDto";
 
 const leagueResponseBuilder = {
     buildCreateLeagueResponse : (league: LeagueAttributes,) : CreateLeagueResponse => {
@@ -7,6 +7,14 @@ const leagueResponseBuilder = {
             league: league,
             statusCode: 201,
             message: 'League successfully created.'
+        }
+        return response;
+    },
+    buildGetLeaguesForProfileResponse: (leagues: LeagueAttributes[]): GetLeaguesForProfileResponse => {
+        const response: GetLeaguesForProfileResponse = {
+            leagues: leagues,
+            statusCode: 200,
+            message: 'Leagues successfully fetched'
         }
         return response;
     }
